<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorGrayLight"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                android:id="@+id/profilePicture"
                android:layout_width="144dp"
                android:layout_height="127dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_person_outline_black_24dp" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:id="@+id/addNameTxt"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>

        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collected"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/txtCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/colorStartBlue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/received"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtNumReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/colorStartBlue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtBank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0"
                        android:textColor="@color/colorStartBlue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/walletButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coin_in_black_24dp"
            android:background="@drawable/buttonstyleithgradient"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />
        <ImageButton
            android:layout_marginRight="10dp"
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyleithgradient"
            android:src="@drawable/map_black_24dp"
            android:layout_weight="1"
            android:text="Map"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/friendsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add_black_24dp"
            android:background="@drawable/buttonstyleithgradient"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />
        <ImageButton
            android:id="@+id/gameBtn"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/buttonstyleithgradient"
            android:layout_weight="1"
            android:src="@drawable/ic_videogame_asset_black_24dp"
            android:textColor="#fff" />

    </LinearLayout>

    <Button
        android:background="@drawable/buttonstyleithgradient"
        android:layout_marginTop="20dp"
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sign_out"/>
    </LinearLayout>



</LinearLayout>




    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".ProfileActivity">-->
    <!---->
    <!---->

<!--</android.support.constraint.ConstraintLayout>-->